--- a/popup.html
+++ b/popup.html
@@ -6,25 +6,8 @@
 </head>
 
 <body>
-  <h1>Activity Tracker</h1>
-  <div id="activity"></div>
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-
-      // fetch('http://localhost:8000/activity')
-      //   .then(response => response.json())
-      //   .then(data => {
-      //     let activityDiv = document.getElementById('activity');
-      //     data.logs.forEach(entry => {
-      //       let div = document.createElement('div');
-      //       div.textContent = `Tab ${entry[1]} was active for ${entry[2]} seconds at ${new Date(entry[3] * 1000).toLocaleString()}`;
-      //       activityDiv.appendChild(div);
-      //     });
-      //   });
-    });
-
-
-  </script>
+  <div id="app">app</div>
+  <script src="popup.js"></script>
 </body>
 
 </html>
